--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
   flex-basis: 15.625rem;
   padding: 1.25rem;
   background-color: #f0f0f0;
-  height: 18vh;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -52,7 +52,8 @@ body {
 }
 
 .registration-button,
-.view-employees-button {
+.view-employees-button,
+.sign-out-button {
   padding: 0.375rem 0.75rem;
   border: none;
   border-radius: 0.55rem;
@@ -73,6 +74,37 @@ body {
 .view-employees-button:hover {
   background-color: #007bff;
 }
+
+.sign-out-button:hover {
+  background-color: orangered;
+}
+
+.Login-button,
+.Register-button,
+.reset-button {
+  padding: 0.375rem 0.75rem;
+  border: none;
+  border-radius: 0.55rem;
+  cursor: pointer;
+  min-height: 2.5rem;
+  font-size: 1.3rem;
+  background-color: #8da9c4;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+.Login-button.active,
+.Register-button.active,
+.reset-button.active {
+  background-color: #0b2545;
+}
+
+.Login-button:hover,
+.Register-button:hover,
+.reset-button:hover {
+  background-color: #007bff;
+}
+
 
 @media (max-width: 48rem) {
   .container {
